[FEAT] - Cria classe generica mapper e atualiza nomes dos metodos e classes.