@@ -1,13 +1,14 @@
 package br.com.manage.store.domain.service.impl;
 
+import br.com.manage.store.application.api.request.ProductRequest;
 import br.com.manage.store.application.api.response.ProductResponse;
 import br.com.manage.store.domain.entity.ProductEntity;
+import br.com.manage.store.domain.mapper.GenericMapper;
 import br.com.manage.store.domain.service.IProductService;
 import br.com.manage.store.domain.util.ComparePrice;
 import br.com.manage.store.infrastructure.handler.exceptions.NotFoundException;
 import br.com.manage.store.infrastructure.repository.ProductRepository;
 import lombok.AllArgsConstructor;
-import org.modelmapper.ModelMapper;
 import org.springframework.beans.BeanUtils;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -17,63 +18,64 @@ import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static br.com.manage.store.domain.util.CheckNotNull.validation;
+import static br.com.manage.store.domain.util.VerifyNotNull.notNull;
 
 @Service
 @AllArgsConstructor
 public class ProductService implements IProductService {
 
     private final ProductRepository productRepository;
-    private final ModelMapper modelMapper;
+    private final GenericMapper mapper;
 
     @Transactional
     @Override
-    public ProductEntity createProduct(ProductEntity entity) {
+    public ProductResponse create(ProductRequest request) {
 
-        validation(entity);
-        ComparePrice.checkPrice(entity.getPrice());
-        entity.setCreateAt(LocalDateTime.now());
+        notNull(request);
+        ComparePrice.checkPrice(request.getPrice());
+        var entity = mapper.map(request, ProductEntity.class);
 
-        return productRepository.save(entity);
+        return mapper.map(productRepository.save(entity), ProductResponse.class);
     }
 
     @Override
-    public ProductEntity findByIdProduct(Long id) {
+    public ProductResponse findById(Long id) {
 
-        validation(id);
-        return productRepository.findById(id).orElseThrow(() -> new NotFoundException("ID: " + id));
+        notNull(id);
+        var entity = productRepository.findById(id).orElseThrow(() -> new NotFoundException("ID: " + id));
+
+        return mapper.map(entity, ProductResponse.class);
     }
 
     @Transactional
     @Override
-    public void deleteProduct(Long id) {
+    public void delete(Long id) {
 
-        validation(id);
+        notNull(id);
         if (!productRepository.existsById(id)) {
             throw new NotFoundException("ID: " + id);
         }
-
         productRepository.deleteById(id);
     }
 
     @Override
-    public ProductEntity updateProduct(Long id, ProductEntity entity) {
+    public ProductResponse update(Long id, ProductRequest request) {
 
-        validation(id, entity);
+        notNull(List.of(id, request));
         var product = productRepository.findById(id).orElseThrow(() -> new NotFoundException("ID: " + id));
-        BeanUtils.copyProperties(entity, product, "id");
-        return productRepository.save(product);
+        BeanUtils.copyProperties(request, product, "id");
+
+        return mapper.map(productRepository.save(product), ProductResponse.class);
     }
 
     @Override
-    public List<ProductResponse> findAllProduct(Specification<ProductEntity> specification, int size, int page) {
+    public List<ProductResponse> findAll(Specification<ProductEntity> specification, int size, int page) {
 
         Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "id"));
-        Page<ProductEntity> productEntities = productRepository.findAll(specification, pageable);
-        return productEntities.stream().map(p -> modelMapper.map(p, ProductResponse.class)).collect(Collectors.toList());
+        Page<ProductEntity> productEntitys = productRepository.findAll(specification, pageable);
+
+        return mapper.mapAll(productEntitys.stream().toList(), ProductResponse.class);
     }
 }
